tests/invalid/NegationType_Invalid_1.whiley

function f(any x) -> !null:
    return x
